--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,10 @@
             <artifactId>kafka-clients</artifactId>
             <version>0.10.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.2</version>
+        </dependency>
     </dependencies>
 </project>
