--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,22 @@
     <version>1.0-SNAPSHOT</version>
     <name>kafka-java</name>
     <url>http://maven.apache.org</url>
+
+    <properties>
+        <kafka-clients.version>0.10.2.0</kafka-clients.version>
+        <logback-classic.version>1.2.2</logback-classic.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>0.10.2.0</version>
+            <version>${kafka-clients.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.2</version>
+            <version>${logback-classic.version}</version>
         </dependency>
     </dependencies>
 </project>
